Refactor controllers/entities; add DTOs & errors
Large refactor introducing DTOs, richer controllers and JPA relationships.

- Controllers: Rewrote Catalogo, Cliente, Comprobante, OrdenVenta, PagoFacturacion, Postventa and InventarioDespacho to use DTOs, services (Reniec, Sunat), repository lookups and proper HTTP validations. Added endpoints for product filtering, stock checks, order creation, payment processing, comprobante issuance, post-sale tickets and dispatching. Business rules implemented: stock validation, IGV (18%), S/15 shipping surcharge, order state transitions and 1:1 comprobante–pago linkage.

- Domain: Replaced primitive FK fields with JPA relationships (OneToOne/ManyToOne/OneToMany), added JsonIgnore/back-references to avoid recursion and added getters/setters for the new relations (EntidadComprobante, EntidadDetalleOrden, EntidadInventario, EntidadOrdenVenta, EntidadPago, EntidadTicketPostventa).

- DTOs & Errors: Added request/response DTOs (Cliente, OrdenVenta, Pago, Producto, TicketPostventa, ApiErrorDTO) and new exceptions plus a global exception handler (DniInvalidoException, StockInsuficienteException, HistorialCrediticioBloqueadoException, GlobalExceptionHandler).

- Repositories/Services: Added/updated repository usages and new service interfaces (ReniecService, SunatService). Minor build/resource entries updated.

This commit centralizes API validation and business logic in controllers/services, improves entity mapping for JPA, and standardizes API input/output via DTOs.